    packages
    - update debian/control
  * Update diverged patches:
    - update debian/patches/nspr_flags_by_pkg_config_hack.patch
    - update debian/patches/bzXXX_reload_new_plugins.patch
    - update debian/patches/firefox-fsh
  * Drop useless patches
    - drop debian/patches/bz436133_att322801.patch
    - update debian/patches/series

 -- Fabien Tassin <fta@sofaraway.org>  Sat, 16 Aug 2008 00:38:11 +0200

firefox-3.0 (3.0.1+build1+nobinonly-0ubuntu2) UNRELEASED; urgency=low

  [ Alexander Sack ]
  * Fix: #246775 - "wrong user-agent string in hardy build" by adding proper
    build-depends
    - update debian/control

  [ Fabien Tassin ]
  * Drop more firefox-3.0 references to ease merge with the 3.1 branch
    - update debian/rules

 -- Fabien Tassin <fta@sofaraway.org>  Tue, 05 Aug 2008 01:33:07 +0200

firefox-3.0 (3.0.1+build1+nobinonly-0ubuntu1) intrepid; urgency=low

  * LP: #247494 - new security/stability release (v3.0.1 build1)
    - see USN-626-1

  [ Alexander Sack <asac@ubuntu.com> ]
  * bump build dependencies for xulrunner 1.9 dev to >= 1.9+nobinonly-0ubuntu3~
    in order to force jemalloc build; bump binary depends accordingly
    - update debian/control
  * add useragent config file and install it in $pkglibdir/defaults/preferences;
    replace @VENDOR@, @VENDOR_SUB@ and @VENDOR_COMMENT@ tokens with lsb_release
    id, release, codename
    - add debian/ubuntu-useragent.js.tmpl
    - update debian/rules
  * bump maxVersion to 1.9.0.* to ease future upgrades of firefox-3.0/xulrunner-1.9
    tandem and lower minVersion to 1.9.0.1 in post-install; in turn adjust binary
    and build depends accordingly.
    - update debian/rules
    - update debian/control

  [ Fabien Tassin <fta@sofaraway.org> ]
  * Add an empty chrome.manifest in all extensions missing that
    file so it prevents the "failure in Chrome Registration" popup
    - update debian/rules
  * Don't use wildcards to detect xulrunner paths, it fails when