@@ -17,6 +17,36 @@
 
 APPNAME=firefox-3.1
 MOZDIR=$HOME/.mozilla
+NAME=`basename $0`
+GDB=/usr/bin/gdb
+
+usage () {
+  echo "Usage: $NAME [-h|--help] [-g|--debug] [...]"
+  echo
+  echo " -g|--debug    start within $GDB"
+  echo " -h|--help     this help screen"
+}
+
+want_debug=0
+while [ $# -gt 0 ]; do
+  case "$1" in
+    -h | --help )
+      usage
+      exit 0 ;;
+    -g | --debug )
+      want_debug=1
+      shift ;;
+    -- ) # Stop option prcessing
+      shift
+      break ;;
+    -* )
+      echo Error: unknown option $1
+      usage
+      exit 1 ;;
+    * )
+      break ;;
+  esac
+done
 
 if [ ! -d $MOZDIR/$APPNAME ] ; then
   FOUND=""
@@ -108,4 +138,17 @@ fi
 
 fi
 
-exec $LIBDIR/$APPNAME "$@"
+if [ $want_debug -eq 1 ] ; then
+  if [ ! -x $GDB ] ; then
+    echo "Sorry, can't find usable $GDB. Please install it."
+    exit 1
+  fi
+  tmpfile=`mktemp /tmp/mozargs.XXXXXX` || { echo "Cannot create temporary file" >&2; exit 1; }
+  trap " [ -f \"$tmpfile\" ] && /bin/rm -f -- \"$tmpfile\"" 0 1 2 3 13 15
+  echo "set args ${1+"$@"}" > $tmpfile
+  echo "$GDB $LIBDIR/$APPNAME -x $tmpfile"
+  $GDB "$LIBDIR/$APPNAME" -x $tmpfile
+  exit $?
+else
+  exec $LIBDIR/$APPNAME "$@"
+fi
